src/test/deca/context/invalid/objet/method-call-without-param.deca
// Description:
//    Condition de la règle 3.28 non respectée 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 17 : The parameter number 3 is not in the expected Type (rule 3.28)
//

class A{
    void get(int x, int y, boolean z){

    }
    //int get;
}
{
    A a = new A();
    a.get();
}